build/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  serviceName: minio
  replicas: 3
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          imagePullPolicy: "IfNotPresent"
          args: 
          - server
          - --console-address 
          - ":9001"
          - http://minio-0.minio/data
          - http://minio-1.minio/data          
          - http://minio-2.minio/data          
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
              - containerPort: 9000
              - containerPort: 9001
          volumeMounts:
            - name: data
              mountPath: /data

  volumeClaimTemplates:            
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
