build/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app: minio
  ports:
    - name: s3
      protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
  clusterIP: None

---

apiVersion: v1
kind: Service
metadata:
  name: minio-console
spec:
  selector:
    app: minio
  ports:
  - name: console
    protocol: TCP
    port: 9001
    targetPort: 9001
  type: ClusterIP
