build/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  labels:
    name: minio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
  - hosts:
    - minio-api.test
    - minio-console.test
    secretName: minio-secret
  rules:
  - host: minio-api.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio
            port: 
              number: 9000
  - host: minio-console.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio-console
            port: 
              number: 9001
